# test

./: CMakeLists.txt  EX2.c  EX3.c  EX4.c  EX5.c  FICHA1.c  a.out  padrao.c  padrao2.c  triangulos.c
